--- a/02-PHP-DATABASE/composer.json
+++ b/02-PHP-DATABASE/composer.json
@@ -9,5 +9,11 @@
             "email": "jonas0214@gmail.com"
         }
     ],
+    "autoload": {
+        "psr-4": {
+            "App\\": "app/",
+            "Database\\": "database/"
+        }
+    },
     "require": {}
 }
